<resources>
    <string name="app_name">家乐宝管理系统</string>
    <string name="app_system_name">后台管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="ac_welcome_bt_sender">送货系统</string>
    <string name="ac_welcome_bt_site">站点系统</string>
    <string name="ac_welcome_logindialog_et_username">账号</string>
    <string name="ac_welcome_logindialog_et_password">密码</string>
    <string name="ac_welcome_logindialog_et_savepassword">保存密码</string>
    <string name="ac_welcome_logindialog_bt_login">登录</string>
    <string name="ac_home_title">首页</string>
    <string name="ac_homepage_timehello">您今天的任务如下，辛苦啦，加油！</string>
    <string name="ac_homepage_totalorder">总订单：0单</string>
    <string name="ac_homepage_unfinishorder">未完成：0单</string>
    <string name="ac_homepage_finishorder">已完成：0单</string>
    <string name="title_activity_customer_order">送货单</string>
    <string name="order_num">单号：</string>
    <string name="order_people">下单人</string>
    <string name="order_addresses">地址</string>
    <string name="customer_name">姓名：</string>
    <string name="customer_phone">电话：</string>
    <string name="customer_logoff">注销账号</string>
    <string name="customer_area">区域：</string>
    <string name="customer_addresses">地址：</string>
    <string name="customer_location">送货轨迹</string>
    <string name="customer_remark">备注：</string>
    <string name="product_category">产品类别</string>
    <string name="product_name">名称</string>
    <string name="product_unitprice">单位/价格</string>
    <string name="product_num">数量</string>
    <string name="total_num">总计：</string>
    <string name="product_subtotal">小计</string>
    <string name="bt_ok">出货</string>
    <string name="lv_load_nomore">没有更多数据了&#8230;</string>
    <string name="lv_load_more">正在加载</string>
    <string name="lv_load_refresh">正在刷新</string>
    <string name="lv_load_refresh_time">最后刷新时间：1970&#8211;01&#8211;01 00:00:00</string>
    <string name="title_activity_customer_order_details">订单详情</string>
    <string name="order_null">暂时没有订单</string>
    <string name="cancel">关闭</string>
    <string name="light">照明</string>
    <string name="rb_unfinish">未送达</string>
    <string name="rb_finish">已送达</string>
    <string name="rb_all">全部</string>
    <string name="tv_time">5月20号   周三  8:00&#8211;10:00</string>
    <string name="title_activity_history_order">订单记录</string>
    <string name="historyorder_details">查看详情  > </string>
    <string name="title_activity_sender_info">个人中心</string>
    <string name="send_start_time">开始：</string>
    <string name="send_select_time">请选择时间</string>
    <string name="send_end_time">结束：</string>
    <string name="send_time_hit">2015年8月8日 08:80</string>
    <string name="send_total_journey">总共行驶：</string>
    <string name="send_journey">0公里</string>
    <string name="select">查询</string>
    <string name="title_activity_sender_location">地理位置展示</string>
    <string name="ac_userinfo_location">>></string>
    <string name="title_activity_purchase_order">采购单</string>
    <string name="product_standard">规格</string>
    <string name="reserve_num">预定数</string>
    <string name="real_num">实际数</string>
    <string name="title_activity_product_sales">菜品销量</string>
    <string name="title_activity_sales_performance">销售业绩</string>
    <string name="title_activity_sales_performance_chart">销售业绩统计图</string>
    <string name="site_order">客户订单</string>
    <string name="order_require_time">发货▲</string>
    <string name="order_time">下单▲</string>
    <string name="order_time1">下单</string>
    <string name="order_source">订单来源</string>
    <string name="order_state">状态</string>
    <string name="order_require_time1">发货</string>
    <string name="title_activity_order">站内订单</string>
    <string name="product_number">产品编号</string>
    <string name="title_activity_site_order_details">订单详情</string>
    <string name="order_no">订单编号：</string>
    <string name="urder_phone">电 话：</string>
    <string name="bt_scan">扫描</string>
    <string name="et_empower">授权码</string>
    <string name="tv_empower">请输入授权码</string>
    <string name="bt_empower_ok">确认</string>
    <string name="bt_empower_no">取消</string>
    <string name="bt_confirm">点击确认订单</string>
    <string name="title_activity_site_manage_system">SiteManageSystemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_routeplanning">路线规划</string>
</resources>
